Add unit test - Add CartItemServiceTest